# rust-angelic-code-333

./: .env  .gitignore  Cargo.toml
src/: Bash.rs  Buddy.rs  Commands.rs  Config.rs  FileEdit.rs  History.rs  Migrations.rs  Permissions.rs  QueryEngine.rs  Services.rs  Tool.rs  UpstreamProxy.rs  Vim.rs  cli.rs  context.rs  cost.rs  file.rs  glob.rs  lib.rs  main.rs  query.rs  query_engine.rs  replace.rs  shell.rs  task.rs  types.rs  utils.rs
src/bootstrap/: mod.rs
src/bridge/: mod.rs
src/commands/: mod.rs
src/commands_ts/: mod.rs
src/constants/: mod.rs
src/context/: mod.rs
src/coordinator/: mod.rs
src/hooks/: mod.rs
src/keybindings/: mod.rs
src/mcp/: mod.rs
src/memdir/: mod.rs
src/plugins/: mod.rs
src/remote/: mod.rs
src/sandbox/: mod.rs
src/schemas/: mod.rs
src/server/: mod.rs
src/skills/: mod.rs
src/state/: mod.rs
src/tools/: file.rs  glob.rs  mod.rs  replace.rs  shell.rs
src/types/: mod.rs
src/ui/: components.rs  ink_core.rs  mod.rs
src/ui/components/messages/: mod.rs
src/ui/components/settings/: mod.rs
src/ui/components/shell/: mod.rs
src/ui/components/tasks/: mod.rs
src/voice/: mod.rs
tests/: integration_tests.rs
