[package]
name = "claude-code-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
dotenv = "0.15"
glob = "0.3"
rand = "0.8"
uuid = { version = "1.4", features = ["v4", "serde"] }
regex = "1.9"
tracing = "0.1"
tracing-subscriber = "0.3"
